[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/upheavtt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/achievement_icons/Construction Achievement.png" type="Texture" id=2]
[ext_resource path="res://ui/Popups/OverlayPopup.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="OverlayPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
margin_left = 880.0
margin_top = 541.4
margin_right = 1280.0
margin_bottom = 691.4

[node name="TextureRect" type="TextureRect" parent="BG"]
margin_left = 13.0
margin_top = 13.0
margin_right = 113.0
margin_bottom = 138.0
texture = ExtResource( 2 )

[node name="AchievementUnlocked" type="Label" parent="BG"]
margin_left = 118.0
margin_top = 10.0
margin_right = 395.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Achievement
Unlocked!"
align = 1
valign = 1

[node name="AchievementName" type="Label" parent="BG"]
margin_left = 118.0
margin_top = 74.0
margin_right = 395.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0.533333, 0, 0.607843, 1 )
custom_fonts/font = SubResource( 2 )
text = "Achievement Description"
align = 1
valign = 1
autowrap = true
